@@ -1,3 +1,10 @@
+2024-09-04 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/tests/bug-3460.c.in,
+	  support/regression/tests/sizeof.c.in,
+	  support/regression/tests/bug-2854.c:
+	  Modify some testcases for implicit conversion between integers and pointers, part of bug #3770.
+
 2024-09-03 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCerr.c,
